@@ -9,14 +9,15 @@ Camaelon_OBJC_FILES = Camaelon.m Image.m GSDrawFunctions.m GraphicToolbox.m \
 CLCompositor.m CLHBoxCompositor.m CLBoxCompositor.m \
 NSBezierPath+round.m CLCache.m ImageProvider.m \
 NSBox.m \
-NSButtonCell.m \
+NSClipView.m NSCell.m NSButtonCell.m \
 NSColor.m \
 NSColorWell.m \
 NSMenuItemCell.m NSMenuView.m \
 NSPopUpButtonCell.m \
 NSBrowser.m NSBrowserCell.m \
-NSProgressIndicator.m \
+GSBrowserMatrix.m NSProgressIndicator.m \
 NSSplitView.m \
+NSOutlineView.m \
 GSTableCornerView.m NSTableHeaderView.m NSTableHeaderCell.m NSTableView.m \
 GSBrowserTitleCell.m \
 NSMatrix.m \
